# opentelemetry-instrumentation-faststream

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/faststream_instrumentation/: __init__.py  annotations.py  package.py
src/opentelemetry/instrumentation/faststream/: __about__.py  __init__.py  middlewares.py  package.py
tests/: test_faststream_instrumentation.py  test_instrumentation.py  test_kafka.py  test_nats.py  test_rabbit.py  test_redis.py
